fix(home posts): overflow-y: hidden;

--- a/resources/js/components/Posts/HomeView/style.scss
+++ b/resources/js/components/Posts/HomeView/style.scss
@@ -201,6 +201,7 @@ $font-size: 0.8em;
         .modal-body {
             @include border-radius(12px);
             width: 32%;
+            overflow-y: hidden;
             padding: 0;
             min-width: 170px;
 
